<?xml version="1.0"?>
<package format="3">
  <name>vesc_ros2</name>
  <version>0.1.0</version>
  <description>ROS 2 nodes and launch files for VESC control + telemetry logging.</description>

  <maintainer email="you@example.com">you</maintainer>
  <license>MIT</license>

  <!-- Python build system -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime deps -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>vesc_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>diagnostic_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
